--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -25,6 +25,11 @@
   weight = 50
 
 [[main]]
+  name = "Foreningsmotion"
+  url = "#documents"
+  weight = 55
+
+[[main]]
   name = "Kontakt"
   url = "#contact"
   weight = 60
